# the-social-app

./: .gitignore  README.md
.github/workflows/: ci.yml  store-build.yml
core-rs/: Cargo.toml  README.md
core-rs/crates/feed/: Cargo.toml
core-rs/crates/feed/src/: lib.rs
core-rs/crates/ffi/: Cargo.toml
core-rs/crates/ffi/src/: lib.rs
core-rs/crates/ffi/tests/: sqlite_flow.rs
core-rs/crates/identity/: Cargo.toml
core-rs/crates/identity/src/: lib.rs
core-rs/crates/protocol/: Cargo.toml
core-rs/crates/protocol/src/: lib.rs
core-rs/crates/store/: Cargo.toml
core-rs/crates/store/src/: lib.rs
core-rs/crates/sync/: Cargo.toml
core-rs/crates/sync/src/: lib.rs
docs/: backend-implementation-plan.md  product-success-plan.md  store-release.md  testing-preview-deploy.md
docs/diagrams/: p2p-backend-overview.drawio  p2p-sync-flow.drawio  security-boundaries.drawio
mobile/: App.tsx  app.config.ts  app.json  eas.json  jest.setup.ts  package-lock.json  package.json  tsconfig.json
mobile/src/: theme.ts  types.ts
mobile/src/__tests__/: App.test.tsx
mobile/src/components/: MessageBubble.tsx  PostCard.tsx
mobile/src/core/: meshCore.ts
