[workspace]
resolver = "2"
members = [
  "crates/identity",
  "crates/protocol",
  "crates/store",
  "crates/sync",
  "crates/feed",
  "crates/ffi"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["MeshSocial"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
